# WebOCR

./: README.md  index.html
.github/workflows/: build.yml  train.yml
rust/: Cargo.toml
rust/src/: ctc_decode.rs  lib.rs  preprocess.rs
training/: charset.py  export_onnx.py  generate_dataset.py  model.py  requirements.txt  train.py
www/: index.js  webocr.js
