[package]
name = "webocr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tract-onnx = "0.21"
ndarray = "0.16"
# Транзитивная зависимость (через tract/ahash и т.п.) не умеет работать
# на wasm32-unknown-unknown без явного backend'а — включаем js-фичу.
getrandom = { version = "0.2", features = ["js"] }

# Уменьшаем итоговый .wasm по размеру и делаем сборку детерминированной
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# rustc для wasm32-unknown-unknown по умолчанию генерирует инструкции
# bulk-memory (memory.copy/memory.fill) и nontrapping-float-to-int
# (i32.trunc_sat_f64_u и т.п.). Бинарник wasm-opt, который использует
# wasm-pack, по умолчанию их не разрешает и падает на валидации —
# явно включаем обе фичи.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
